--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ tokio = { version = "1.36.0", features = ["full"] }
 tokio-stream = "0.1.14"
 tokio-util = "0.7.10"
 futures = "0.3.30"
+futures-core = "0.3.30"
 async-trait = "0.1.77"
 thiserror = "1.0"
 
